Opened 16 years ago

Closed 16 years ago

#2880 closed bug (fixed)

Regression: can't mount iso images anymore

Reported by: julun Owned by: axeld
Priority: blocker Milestone: R1/alpha1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I used to have some iso images that i added to my vmware image and they got automatically mounted after boot. Since some revisions they won't show up in Trackers mount menu, but they are still shown e.g in DriveSetup (but impossible to mount). I've uploaded one of these images and see attached the part of my .vmx file.

# ISO IMAGE ide0:1.present = "TRUE" ide0:1.fileName = "image.iso" ide0:1.deviceType = "cdrom-image" ide0:1.mode = "persistent" ide0:1.startConnected = "TRUE"

http://www.julun.de/haiku/image.iso.tar.gz

Attachments (2)

screenshot.png (35.1 KB ) - added by julun 16 years ago.
serial-haiku-cdimage.txt (6.1 KB ) - added by VinDuv 16 years ago.
Serial log

Download all attachments as: .zip

Change History (5)

by julun, 16 years ago

Attachment: screenshot.png added

by VinDuv, 16 years ago

Attachment: serial-haiku-cdimage.txt added

Serial log

comment:1 by anevilyak, 16 years ago

May or may not be related, but I noticed that on more recent builds, none of the filesystems seem to succeed in recognizing CDs automatically here, i.e. I stuck a CD from an old DOS game into the drive, and it never showed up in tracker's mount menu, though serial seemed to indicate that all the filesystems tried to look at it.

comment:2 by axeld, 16 years ago

Component: File SystemsSystem/Kernel
Priority: normalblocker
Status: newassigned

This problem has been introduced in hrev27994, I'm looking into it.

comment:3 by axeld, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev28339.

Note: See TracTickets for help on using tickets.