ide_isa: integrate fix for #2880

This was fixed in 2008 in the ide_pci driver, but has never been merged
in ide_isa. It probably won't matter as machine with IDE on the ISA bus
are unlikely to run Haiku.

Thanks to philcostin for finding the problem using cppcheck.